<resources>
    <string name="app_name">Calculator</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="point">.</string>
    <string name="equals">=</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">÷</string>
    <string name="percent">%</string>
    <string name="delete_one_sign">⌫</string>
    <string name="delete_everything">AC</string>
    <string name="theme_default">Основная тема</string>
    <string name="theme_blue">Синяя тема</string>
    <string name="theme_red">Красная тема</string>
    <string name="theme_green">Зелёная тема</string>
    <string name="settings">Настройки</string>
    <string name="runCalculator">Запустить калькулятор</string>
    <string name="test_name">TestApp</string>

</resources>