<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_calculator"
    tools:context=".MainActivity">


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="viewEnd"
        android:textColor="@color/white"
        android:textSize="@dimen/size_text_answer"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout_five"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout_five"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout_four"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/delete_everything"
            style="@style/buttons"
            android:layout_weight="1"
            android:text="@string/delete_everything" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/delete_one_sign"
            style="@style/buttons"
            android:layout_weight="1"
            android:text="@string/delete_one_sign" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/percent"
            style="@style/buttons"
            android:layout_weight="1"
            android:text="@string/percent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/divide"
            style="@style/buttons"
            android:layout_weight="1"
            android:text="@string/divide" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_four"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout_three"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/seven"
            style="@style/buttons"
            android:layout_weight="1"
            android:text="@string/seven" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/eight"
            style="@style/buttons"
            android:layout_weight="1"
            android:text="@string/eight" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/nine"
            style="@style/buttons"
            android:layout_weight="1"
            android:text="@string/nine" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/multiply"
            style="@style/buttons"
            android:layout_weight="1"
            android:text="@string/multiply" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/four"
            style="@style/buttons"
            android:layout_weight="1"
            android:text="@string/four" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/five"
            style="@style/buttons"
            android:layout_weight="1"
            android:text="@string/five" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/six"
            style="@style/buttons"
            android:layout_weight="1"
            android:text="@string/six" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/plus"
            style="@style/buttons"
            android:layout_weight="1"
            android:text="@string/plus"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/one"
            style="@style/buttons"
            android:layout_weight="1"
            android:text="@string/one" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/two"
            style="@style/buttons"
            android:layout_weight="1"
            android:text="@string/two" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/three"
            style="@style/buttons"
            android:layout_weight="1"
            android:text="@string/three" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/minus"
            style="@style/buttons"
            android:layout_weight="1"
            android:text="@string/minus"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/zero"
            style="@style/buttons"
            android:layout_weight="1"
            android:text="@string/zero" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/point"
            style="@style/buttons"
            android:layout_weight="1"
            android:text="@string/point" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/equals"
            style="@style/buttons"
            android:layout_weight="2"
            android:text="@string/equals"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_six"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settings"
            style="@style/buttons"
            android:layout_weight="1"
            android:text="@string/settings"
            tools:ignore="TextContrastCheck"
            android:layout_width="0dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
