<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_calculator"
    tools:context=".SecondActivity">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/theme_default"
            android:textColor="@color/white" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/theme_red"
            android:textColor="@color/Red" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/theme_green"
            android:textColor="@color/LimeGreen" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/theme_blue"
            android:textColor="@color/DeepSkyBlue" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>